--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-
         </activity>
         <activity
             android:name=".LoginActivity"
@@ -24,6 +23,18 @@
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register" >
+        </activity>
+        <activity
+            android:name=".ToDoActivity"
+            android:label="@string/title_activity_to_do" >
+        </activity>
+        <activity
+            android:name=".ValueAnalysisActivity"
+            android:label="@string/title_activity_value_analysis" >
+        </activity>
+        <activity
+            android:name=".HistoryActivity"
+            android:label="@string/title_activity_history" >
         </activity>
     </application>
 
